feat: implemented all features