@@ -3,7 +3,10 @@ package com.springfield.website.utils;
 import com.springfield.website.common.OmnixApiException;
 import com.springfield.website.common.ResponseCode;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 public class HttpUtil {
 
@@ -12,7 +15,7 @@ public class HttpUtil {
                 .withCode(responseCode)
                 .withMessage(responseMessage)
                 .withError(responseMessage)
-                .withErrors(Collections.singletonList(responseMessage));
+                .withErrors(new ArrayList<>(List.of(responseMessage)));
     }
 
     public static OmnixApiException getResolvedException(String responseCode, Exception e){
@@ -21,15 +24,16 @@ public class HttpUtil {
                 .withMessage(e.getMessage())
                 .withError(e.getMessage())
                 .withException(e)
-                .withErrors(Collections.singletonList(e.getMessage()));
+                .withErrors(new ArrayList<>(List.of(e.getMessage())));
     }
 
     public static OmnixApiException getResolvedException(Exception e){
+        e.printStackTrace();
         return OmnixApiException.newInstance()
                 .withCode(ResponseCode.INTERNAL_SERVER_ERROR)
                 .withMessage(e.getMessage())
                 .withError(e.getMessage())
                 .withException(e)
-                .withErrors(Collections.singletonList(e.getMessage()));
+                .withErrors(new ArrayList<>(List.of(e.getMessage())));
     }
 }
